k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: cip-api-service
  labels:
    app: cip-api
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: cip-api
