k8s/service-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: cip-dashboard-service
  labels:
    app: cip-dashboard
spec:
  type: ClusterIP
  ports:
  - port: 8501
    targetPort: 8501
    protocol: TCP
    name: http
  selector:
    app: cip-dashboard
